Down arrow images styled and aligned correctly in style.css file.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,12 +24,14 @@ body {
 p {
     color: hsl(240, 6%, 50%);
     letter-spacing: 1px;
+    margin-bottom: 20px;
 }
 
 h1 {
-    color: (237, 12%, 33%);
+    color: hsl(238, 29%, 16%);
     font-weight: 700;
     letter-spacing: 1px;
+    margin-bottom: 40px;
 }
 
 /*-------FAQ Card------*/
@@ -60,6 +62,30 @@ section {
     left: 50%;
     width: 450px;
     word-wrap: break-word;
+}
+
+hr {
+    width: 80%;
+}
+
+.questions > p:hover {
+    color: hsl(14, 88%, 65%);
+}
+
+/*-------Display style change when Questions clicked--------*/
+
+.clicked-question {
+    font-weight: 700;
+    color: black;
+}
+
+/*------Arrow chevron-----*/
+
+.arrow {
+    display: flex;
+    position: relative;
+    left: 75%;
+    bottom: 10px;
 }
 
 /*------Main Image Woman------*/
